--- a/templates/Ficha.html
+++ b/templates/Ficha.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ficha do Personagem</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>Ficha de {{ personagem.nome }}</h1>
