Organizado para estrutura MVC melhorada

--- a/views/templates/Distruibuir.html
+++ b/views/templates/Distruibuir.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Distribuir Atributos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/distribuir.css') }}">
 </head>
 <body>
     <h2>Distribua os valores nos atributos:</h2>
