--- a/views/templates/Menu.html
+++ b/views/templates/Menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Criar Personagem</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
 </head>
 <body>
     <h1>Crie seu personagem</h1>
