--- a/views/templates/Ficha.html
+++ b/views/templates/Ficha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ficha do Personagem</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/ficha.css') }}">
 </head>
 <body>
     <h1>Ficha de {{ personagem.nome }}</h1>
